# Cognition

./: ,  .cognition-cli-state.json  .env.example  .gitignore  .pre-commit-config.yaml  : 11,    AGENTS.md  ARCHITECTURE_DEEP_AGENTS_FS.md  BACKEND_ROUTES_CONFIG.md  CHANGELOG.md  COGNITION_ISSUES.md  DOCUMENTATION_UPDATE_SUMMARY.md  DeepAgentsCoreCapabilitiesAudit.txt  Deep_AgentsVSCognition_Alignment_Analysis.txt  Dockerfile  Dockerfile.k8sandbox  Dockerfile.sandbox  FIRST-PRINCIPLE-EVALUTION.md  GETTING_STARTED.md  LIVE-TEST-REPORT.md  MLFLOW-INTEROPERABILITY.md  Makefile  PROJECT_PERSISTENCE_COMPLETE.md  PROJECT_PERSISTENCE_PROGRESS.md  QUICK_START.md  README.md  ROADMAP.md  TUIClient.md  USER_GUIDE.md  config.example.yaml  docker-compose.yml  mlflow.db  pyproject.toml  roadmap.md  session.txt  tuitest.md
.cognition/: sessions.json  state.db  state.db-shm  state.db-wal
.cognition/skills/review/: SKILL.md
.github/workflows/: ci.yml  pre-release-images.yml
agent/: __init__.py  entrypoint.py  local_tools.py  requirements.txt  runtime.py  sandbox.py
client/: __init__.py
client/cli/: __init__.py  main.py  shell.py
client/tui/: api.py  app.py  config.py  websocket.py
client/tui/screens/: __init__.py  project_picker.py  session.py
client/tui/styles/: app.tcss
client/tui/widgets/: __init__.py  chat_message.py  prompt.py  status_bar.py  tool_block.py
deploy/: README.md  deploy.sh
deploy/cnpg/: cluster.yaml
deploy/examples/: cognition-sandbox-template.yaml
deploy/helm/cognition/: Chart.yaml  values.yaml
deploy/helm/cognition-observe/: Chart.yaml  values.yaml
deploy/sandbox/: runtime_server.py
docker/: Dockerfile.agent  loki-config.yml  otel-collector-config.yml  prometheus.yml  promtail-config.yml
docker/grafana/dashboards/: cognition-dashboard.json
docs/: DEPLOYMENT_GUIDE.md  README.md  TROUBLESHOOTING.md  architecture.md  config.example.yaml  design.md  gap-analysis-opendev.md  mcp.md  mvp_designv2.md  sandbox-types.md
docs/archive/: configuration.md  design-part2-multi-tenancy.md  design.md  hybrid-architecture.md  troubleshooting.md
docs/blueprints/: cyber-investigation.md  data-analyst.md  starkeep.md
docs/concepts/: README.md  agent-runtime.md  architecture.md  audit-trails.md  execution-environments.md  kubernetes-sandbox.md  observability.md  pluggability.md  security.md  session-state.md  sessions-and-messages.md  storage-and-execution.md  tool-registry-design.md
docs/guides/: README.md  api-reference.md  building-platforms.md  configuration.md  core-vs-app-layer.md  custom-tools.md  deployment.md  extending-agents.md  getting-started.md  quickstart.md  release-checklist.md  tool-registry.md
docs/sandbox/: README.md  cognition-sandbox-backend.md
docs/v2/: README.md
docs/v2/blueprints/: cognition-cli.md  cyber-investigation.md  genesmith.md  zeroone.md
docs/v2/concepts/: architecture.md  execution-environments.md  forensic-audit.md  session-state.md
docs/v2/guides/: cli.md  configuration.md  custom-tools.md  deployment.md  extending-agents.md  quickstart.md
examples/: README.md
examples/bedrock-config/: README.md
examples/exhaustive-config/: .env.example  AGENTS.md  README.md
examples/exhaustive-config/api/: agent-create.json  global-agent-defaults-patch.json  global-provider-defaults-patch.json  provider-create.json  skill-create.json  tool-create.json
examples/minimal-config/: README.md
examples/python-project/: README.md  main.py  requirements.txt  utils.py
examples/python-project/.cognition/: config.yaml  sessions.json
examples/scoped-multi-tenant/: README.md
scripts/: BACKEND_TESTS_README.md  benchmark_performance.py  demo_sandbox_local.py  manual_hitl_check.py  test_backends_interactive.py  test_backends_live.py  test_docker_compose.sh
server/: __init__.py  alembic.ini  version.py
server/alembic/: env.py
server/alembic/versions/: 001_initial_schema.py  002_enrich_message_model.py  003_add_agent_name.py
server/app/: agent.py  agent_registry.py  agent_runtime.py  bootstrap.py  cli.py  config_loader.py  exceptions.py  file_watcher.py  main.py  message_store.py  middleware.py  mlflow_tracing.py  models.py  prompt_registry.py  rate_limiter.py  sandbox.py  scoping.py  session_manager.py  session_store.py  sessions.py  settings.py  validation.py
server/app/agent/: __init__.py  backends.py  (+21 more)
shared/: __init__.py
shared/protocol/: internal.py  schema.json
skill/cognition-agent-backend/: SKILL.md
tests/: conftest.py  test_agent_bridge.py  test_backend_routes.py  test_client_api.py  test_client_config.py  test_client_screens.py  test_client_websocket.py  test_client_widgets.py  test_internal_protocol.py  test_local_sandbox.py  test_local_tools.py  test_observability.py  test_protocol.py  test_safety.py
tests/e2e/: __init__.py  conftest.py  test_agent_interaction.py  test_api_and_websocket.py  test_k8s_sandbox_e2e.py  test_p0_features.py  test_pluggability_e2e.py  test_sandbox_workflow.py  test_tui.py  test_workflow.py
tests/fixtures/: schemas.py
tests/integration/: test_e2e_integration.py
tests/unit/: test_abort.py  test_agent_def_field_wiring.py  test_agent_definition.py  test_agent_definition_registry.py  test_agent_markdown_config.py  test_agent_param_overrides.py  test_agent_phase4.py  test_agent_registry.py  test_bootstrap.py  test_builtin_tools.py  test_composite_backend_skill_routing.py  test_config_dispatcher.py  test_config_loader.py  test_config_registry.py  test_config_registry_tools.py  test_config_store_agent_definitions.py  test_deep_agents_alignment.py  test_exceptions.py  test_k8s_sandbox_backend.py  test_llm_phase3.py  test_llm_registry.py  test_message_store.py  test_migrations.py  test_model_catalog.py  test_model_registry.py  test_observability_config.py  test_pluggability.py  test_pluggability_integration.py  test_postgres_dsn.py  test_prompt_config.py  test_protocol.py  test_provider_resolution.py  test_rate_limiter.py  test_rate_limiter_integration.py  test_rest_api.py  test_runtime_streaming.py  test_sandbox.py  test_schema.py  test_scoping.py  test_session_manager.py  (+8 more)
(+264 files in other folders)
