[project]
name = "cognition"
version = "0.1.0"
description = "Local AI coding assistant built on LangGraph Deep Agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Cognition Team"}
]
keywords = ["ai", "coding", "agent", "llm", "langgraph", "deep-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core framework
    "deepagents>=0.1.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    
    # Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "python-multipart>=0.0.12",
    
    # Client
    "textual>=0.85.0",
    "httpx>=0.27.0",
    
    # Configuration & utilities
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    
    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",
    
    # Observability
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
# LLM providers (install as needed)
openai = ["langchain-openai>=0.2.0", "openai>=1.52.0"]
bedrock = ["langchain-aws>=0.2.0", "boto3>=1.35.0"]

# Testing
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
]

# Development
dev = [
    "cognition[test,openai]",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

# All extras
all = [
    "cognition[openai,bedrock,test]",
]

[project.scripts]
cognition = "server.app.cli:main"
cognition-server = "server.app.cli:main"
cognition-client = "client.tui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "client", "shared"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warnings
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM",# flake8-simplify
]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["server", "client", "shared"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 60
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (test component interactions)",
    "e2e: End-to-end tests (full workflow)",
    "slow: Slow tests (skip with -m 'not slow')",
]

[tool.coverage.run]
source = ["server", "client", "shared"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
