[project]
name = "cognition"
version = "0.4.0"
description = "Local AI coding assistant built on LangGraph Deep Agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Cognition Team"}
]
keywords = ["ai", "coding", "agent", "llm", "langgraph", "deep-agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core framework
    "deepagents>=0.1.0",
    "langchain>=1.2.13", # MLflow autolog compatible
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0,<1.3.0",
    # Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "python-multipart>=0.0.12",
    # Client
    "httpx>=0.27.0",
    "prompt-toolkit>=3.0.43",
    # Configuration & utilities
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",
    # File watching
    "watchdog>=6.0.0",
    # Observability
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-langchain>=0.28b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "prometheus-client>=0.21.0",
    "langsmith[otel]>=0.4.25",
    "langgraph-checkpoint-sqlite>=1.0.0",
    # MCP (Model Context Protocol) - Remote-only support
    "mcp>=1.2.0",
]

[project.optional-dependencies]
# LLM providers (install as needed)
openai = ["langchain-openai>=0.2.0", "openai>=1.52.0"]
bedrock = ["langchain-aws>=0.2.0", "boto3>=1.35.0"]

# Testing
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-timeout>=2.3.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
]

# Development
dev = [
    "cognition[test,openai]",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

# Deployment (MLflow tracing + Docker sandbox)
deploy = [
    "mlflow[genai]>=2.19.0",
    "docker>=7.0.0",
    "psycopg[binary,pool]>=3.1.0",
    "asyncpg>=0.30.0",
    "langgraph-checkpoint-postgres>=2.0.0",
]

# All extras
all = [
    "cognition[openai,bedrock,test,deploy]",
]

[project.scripts]
cognition = "server.app.cli:main"
cognition-server = "server.app.cli:main"
cognition-cli = "client.cli.main:main"
cognition-client = "client.tui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "client", "shared"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM",# flake8-simplify
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    # --- Noisy / framework false-positives ---
    "B008",   # Depends()/typer.Option() in default args — required by FastAPI/Typer
    "E402",   # Module-level import not at top — intentional lazy/conditional imports
    "W291",   # Trailing whitespace — cosmetic
    # --- Style preferences, not bugs ---
    "SIM102", # Collapsible if — readability preference
    "SIM101", # Duplicate isinstance — readability preference
    "SIM105", # Use contextlib.suppress — readability preference
    "SIM108", # Ternary operator — readability preference
    "SIM110", # Use any()/all() — readability preference
    "SIM117", # Merge with statements — readability preference
    "SIM118", # Use `key in dict` — readability preference
    "N806",   # Non-lowercase variable in function — UPPER_CASE constants in functions
    "UP042",  # Use StrEnum — functionally equivalent, avoid forced upgrade
    "B007",   # Unused loop control variable — often intentional
    "B017",   # Blind exception in pytest.raises — test pattern
    "B023",   # Function uses loop variable — closure pattern
    "C401",   # Unnecessary generator set — readability preference
    "F811",   # Redefinition of unused — common in test fixtures
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F841"]  # Unused variables common in test assertions / exploratory code

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["server", "client", "shared"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
explicit_package_bases = true

# Pragmatic overrides for tests - too many untyped fixtures to fix
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = false
ignore_missing_imports = true

# E2E tests use pytest fixtures extensively with untyped signatures - ignore all errors
[[tool.mypy.overrides]]
module = "tests.e2e.*"
ignore_errors = true

# Ignore workspaces entirely - it's example/scratch code
[[tool.mypy.overrides]]
module = "workspaces.*"
ignore_errors = true

# Observability uses optional-import pattern for prometheus/otel - suppress noise
[[tool.mypy.overrides]]
module = "server.app.observability"
ignore_errors = true

# Postgres uses optional deploy deps (asyncpg, psycopg) without stubs
[[tool.mypy.overrides]]
module = "server.app.storage.postgres"
ignore_errors = true

# Optional LLM provider deps - not installed in base env, suppress import errors
[[tool.mypy.overrides]]
module = ["langchain_aws", "botocore", "botocore.*"]
ignore_missing_imports = true

# asyncpg has no stubs on Python 3.11 CI env
[[tool.mypy.overrides]]
module = ["asyncpg", "asyncpg.*"]
ignore_missing_imports = true

# boto3 has no bundled stubs (boto3-stubs is optional)
[[tool.mypy.overrides]]
module = ["boto3", "boto3.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 60
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (test component interactions)",
    "e2e: End-to-end tests (full workflow)",
    "slow: Slow tests (skip with -m 'not slow')",
    "mlflow: MLflow integration tests (require MLflow server)",
]

[tool.coverage.run]
source = ["server", "client", "shared"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12.20250915",
]
